Fix some spacing issues and create form

--- a/public/_scss/components/elements.scss
+++ b/public/_scss/components/elements.scss
@@ -7,4 +7,14 @@
   box-sizing: border-box;
   border-radius: 0;
   font-size: 24px;
+
+  &--footer-form {
+    background-color: $RED_2;
+    color: white;
+    border: none;
+    padding: 3px 15px;
+    height: 36px;
+    line-height: 36px;
+    margin-left: 0;
+  }
 }
