--- a/public/_scss/components/footer.scss
+++ b/public/_scss/components/footer.scss
@@ -4,7 +4,10 @@
   padding: 42px 0;
 
   &--left {
-
+    float: left;
+  }
+  &--right {
+    float: right;
   }
   &--icons {
     a {
@@ -22,6 +25,19 @@
       color: inherit;
       line-height: 48px;
       font-size: 24px;
+    }
+  }
+  &--form {
+    label {
+      color: $WHITE;
+      font-size: 24px;
+    }
+    input {
+      border-radius: 0;
+      outline: none;
+      background-color: $WHITE;
+      min-width: 400px;
+      border: none;
     }
   }
 }
