--- a/public/_scss/components/nav.scss
+++ b/public/_scss/components/nav.scss
@@ -21,6 +21,7 @@
       cursor: pointer;
 
       &:hover {
+        background-color: $GRAY_2;
         text-decoration: none;
       }
     }
