--- a/public/_scss/components/section.scss
+++ b/public/_scss/components/section.scss
@@ -8,4 +8,7 @@
     letter-spacing: -3.4px;
     margin-bottom: 42px;
   }
+  &--white {
+    background-color: $WHITE;
+  }
 }
